--- a/client/src/components/GetOrder/GetOrder.css
+++ b/client/src/components/GetOrder/GetOrder.css
@@ -1,27 +1,34 @@
 .table-cont {
-  width: 50%;
+  width: 70%;
   margin: auto;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-right: -50%;
-  transform: translate(-50%, -50%);
+  margin-top: 4em;
 }
 .table {
   width: 100%;
   border-collapse: collapse;
 }
+
 .cell {
   text-align: center;
   padding: 10px;
   border: 1px solid black;
 }
 
+.row-head {
+  background-color: #ffe88d;
+}
+.one {
+  background-color: purple;
+}
 .table thead tr {
   border-bottom: 2px solid black;
   border-right: 1px solid black;
   font-weight: 500;
   background-color: #a0bff9;
+}
+
+.one {
+  background-color: purple;
 }
 
 .table tbody tr {
@@ -31,4 +38,15 @@
 
 .table td:last-child {
   border-right: none;
+}
+
+@media (max-width: 800px) {
+  .table {
+    font-size: 3.2vw;
+  }
+}
+@media (max-width: 500px) {
+  .table {
+    font-size: 2.6vw;
+  }
 }
